--- a/client/board.html
+++ b/client/board.html
@@ -495,6 +495,11 @@
     <div class="console-sidebar">
       <div class="request-access-widget" data-widget="requestAccess" data-agent="@epistery/message-board" data-list="epistery::editor"></div>
 
+      <div class="sidebar-title">Channels</div>
+      <ul class="sidebar-links" id="channels-list">
+        <!-- Channels will be loaded here -->
+      </ul>
+
       <div class="sidebar-title">Links</div>
       <ul class="sidebar-links" id="sidebar-links">
         <!-- Links will be loaded here -->
