--- a/client/admin.html
+++ b/client/admin.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Message Board Admin</title>
   <link rel="stylesheet" href="/style/static.css">
+  <script src="/script/common.js"></script>
   <style>
     .admin-container {
       max-width: 1200px;
@@ -346,13 +347,7 @@
   </style>
 </head>
 <body>
-  <header>
-    <nav class="container">
-      <a href="/" class="logo">
-        <span class="logo-text">Message Board Admin</span>
-      </a>
-    </nav>
-  </header>
+  <header data-widget="header"></header>
 
   <main class="admin-container">
     <div id="message-container"></div>
