--- a/client/chat.html
+++ b/client/chat.html
@@ -353,13 +353,7 @@
   <script src="/script/common.js"></script>
 </head>
 <body>
-<header>
-  <nav>
-    <a href="/?home" class="logo">
-      <img alt="logo" src="/image/epistery-logo-32.svg" class="logo-window">
-    </a>
-  </nav>
-</header>
+<header data-widget="header"></header>
 
   <main class="console-layout">
     <div class="console-main">
@@ -423,7 +417,6 @@
     </div>
   </footer>
 
-  <script type="module" src="/script/widgets.mjs"></script>
   <script type="module" src="/agent/epistery/message-board/client/chat-app.js"></script>
   <script>
     // Load sidebar links
